feat: Release v0.13.0
- Generalize transport layer across various data source formats
- Session query endpoint now supports `application/sql`
